exercises/01-services-networking/hints/ex02-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: # TODO: service name
spec:
  type: # TODO: NodePort
  selector:
    # TODO: match web deployment pods
  ports:
  - port: # TODO: service port
    targetPort: # TODO: container port
    nodePort: # TODO: optional - leave blank to auto-assign
