exercises/01-services-networking/hints/ex03-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: # TODO: service name
spec:
  type: # TODO: ExternalName
  externalName: # TODO: external DNS name
