exercises/01-services-networking/hints/ex06-ingress-path-splitting.yaml
# API Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:1.0
        args: ["-text=API"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: api
  ports:
  - port: 8080
    targetPort: 5678
---
# Ingress with path splitting
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: # TODO: ingress name
spec:
  ingressClassName: # TODO: nginx
  rules:
  - host: # TODO: app.example.com
    http:
      paths:
      - path: # TODO: /api path
        pathType: # TODO: Prefix
        backend:
          service:
            name: # TODO: api-svc
            port:
              number: # TODO: 8080
      - path: # TODO: / path
        pathType: # TODO: Prefix
        backend:
          service:
            name: # TODO: web-svc
            port:
              number: # TODO: 80
