exercises/01-services-networking/hints/ex09-ingress-rewrite.yaml
# Store Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: store-svc
spec:
  selector:
    app: store
  ports:
  - port: 80
---
# Ingress with path rewrite
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: # TODO: ingress name
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: # TODO: /$2
    nginx.ingress.kubernetes.io/use-regex: # TODO: "true"
spec:
  ingressClassName: # TODO: nginx
  rules:
  - host: # TODO: store.example.com
    http:
      paths:
      - path: # TODO: /store(/|$)(.*)
        pathType: ImplementationSpecific  # Required for regex
        backend:
          service:
            name: # TODO: store-svc
            port:
              number: # TODO: 80
