exercises/01-services-networking/hints/ex10-ingressclass-default-backend.yaml
# Default Backend Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:1.0
        args: ["-text=404 Not Found"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend-svc
spec:
  selector:
    app: default-backend
  ports:
  - port: 5678
---
# Ingress with default backend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: # TODO: ingress name
spec:
  ingressClassName: # TODO: nginx
  defaultBackend:
    service:
      name: # TODO: default-backend-svc
      port:
        number: # TODO: 5678
  rules:
  - host: # TODO: app.local (or any specific host)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: # TODO: web-svc or any service
            port:
              number: # TODO: 80
